k8s/central.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central
  namespace: agroflow
spec:
  replicas: 1
  selector:
    matchLabels: { app: central }
  template:
    metadata:
      labels: { app: central }
    spec:
      containers:
      - name: central
        image: <tu-dockerhub>/central:v1.0
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet: { path: /health, port: 3001 }
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /health, port: 3001 }
          initialDelaySeconds: 30
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: central
  namespace: agroflow
spec:
  selector: { app: central }
  ports:
  - port: 3001
    targetPort: 3001
