k8s/facturacion-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: facturacion
  namespace: agroflow
spec:
  type: ClusterIP
  selector:
    app: facturacion
  ports:
    - name: http
      port: 3003
      targetPort: 3003
