k8s/facturacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion
  namespace: agroflow
spec:
  replicas: 1
  selector:
    matchLabels: { app: facturacion }
  template:
    metadata:
      labels: { app: facturacion }
    spec:
      containers:
      - name: facturacion
        image: <tu-dockerhub>/facturacion:v1.0
        ports:
        - containerPort: 3003
        readinessProbe:
          httpGet: { path: /health, port: 3003 }
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /health, port: 3003 }
          initialDelaySeconds: 30
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: facturacion
  namespace: agroflow
spec:
  selector: { app: facturacion }
  ports:
  - port: 3003
    targetPort: 3003
