k8s/inventario-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventario
  namespace: agroflow
spec:
  type: ClusterIP
  selector:
    app: inventario
  ports:
    - name: http
      port: 3002
      targetPort: 3002
