k8s/inventario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventario
  namespace: agroflow
spec:
  replicas: 1
  selector:
    matchLabels: { app: inventario }
  template:
    metadata:
      labels: { app: inventario }
    spec:
      containers:
      - name: inventario
        image: <tu-dockerhub>/inventario:v1.0
        ports:
        - containerPort: 3002
        readinessProbe:
          httpGet: { path: /health, port: 3002 }
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /health, port: 3002 }
          initialDelaySeconds: 30
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: inventario
  namespace: agroflow
spec:
  selector: { app: inventario }
  ports:
  - port: 3002
    targetPort: 3002
